[package]
name = "restaurant_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
#rocket_contrib = "0.5.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
log = { version = "0.4" }
fern = "0.6.2"
chrono = "0.4.38"